cabal-version: 3.0
name: plutus-ledger-constraints
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: sjoerd.visscher@iohk.io
author: Michael Peyton Jones, Jann Mueller
synopsis: Ledger Constraints
description:
    Plutus transaction constraints library
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-apps

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable MultiParamTypeClasses FlexibleContexts
                        ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -Wmissing-import-lists
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: lang
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Ledger.Constraints
        Ledger.Constraints.OffChain
        Ledger.Constraints.OnChain
        Ledger.Constraints.TxConstraints

    build-depends:
        base >=4.9 && <5,
        aeson -any,
        containers -any,
        lens -any,
        mtl -any,
        openapi3 -any,
        prettyprinter -any,
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        transformers -any,

test-suite plutus-ledger-constraints-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    build-depends:
        base >=4.9 && <5,
        hedgehog -any,
        plutus-ledger -any,
        plutus-ledger-constraints -any,
        plutus-tx -any,
        tasty -any,
        tasty-hedgehog -any,
