cabal-version: 3.0
name: plutus-ledger
version: 1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: michael.peyton-jones@iohk.io
author: Michael Peyton Jones, Jann Mueller
synopsis: Wallet API
description:
    Plutus ledger library
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-apps

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable MultiParamTypeClasses FlexibleContexts
                        ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
    import: lang
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Data.Time.Units.Extra
        Prettyprinter.Extras
        Data.Aeson.Extras
        Ledger
        Ledger.Ada
        Ledger.Address
        Ledger.Address.Orphans
        Ledger.AddressMap
        Ledger.Builtins.Orphans
        Ledger.Blockchain
        Ledger.CardanoWallet
        Ledger.Credential.Orphans
        Ledger.Crypto
        Ledger.Crypto.Orphans
        Ledger.DCert.Orphans
        Ledger.Fee
        Ledger.Generators
        Ledger.Index
        Ledger.Index.Internal
        Ledger.Scripts
        Ledger.Scripts.Orphans
        Ledger.Slot
        Ledger.Orphans
        Ledger.Params
        Ledger.TimeSlot
        Ledger.Tokens
        Ledger.Tx
        Ledger.Tx.Internal
        Ledger.Tx.CardanoAPI
        Ledger.Tx.Types
        Ledger.Tx.Types.Tx
        Ledger.Tx.Types.TxInput
        Ledger.Tx.Types.Withdrawal
        Ledger.Tx.Types.Certificate
        Ledger.Tx.Orphans
        Ledger.Typed.Scripts
        Ledger.Typed.Scripts.Validators
        Ledger.Typed.Tx
        Ledger.Typed.TypeUtils
        Ledger.Value
        Ledger.Value.Orphans
        Ledger.Validation
    reexported-modules:
        Plutus.V1.Ledger.Bytes as Ledger.Bytes,
        Plutus.V1.Ledger.Credential as Ledger.Credential,
        Plutus.V1.Ledger.DCert as Ledger.DCert,
        Plutus.V1.Ledger.Interval as Ledger.Interval,
        Plutus.V1.Ledger.Time as Ledger.Time,
        -- The rest of the plutus-ledger-api modules are reexported from within
        -- the Haskell modules and not in the current cabal file.
        -- For example: Plutus.V1.Ledger.Address is reexported by Ledger.Address
    other-modules:
        Ledger.Tx.CardanoAPITemp
        Codec.CBOR.Extras

    build-depends:
        base >=4.9 && <5,
        base16-bytestring >= 1,
        aeson -any,
        array -any,
        bytestring -any,
        cardano-api -any,
        cardano-api:gen -any,
        cardano-crypto -any,
        cardano-crypto-class -any,
        cardano-ledger-alonzo -any,
        cardano-ledger-babbage -any,
        cardano-ledger-byron -any,
        cardano-ledger-core -any,
        cardano-ledger-shelley,
        cardano-ledger-shelley-ma -any,
        cardano-slotting -any,
        deepseq -any,
        cborg -any,
        containers -any,
        cryptonite >=0.25,
        data-default -any,
        flat -any,
        hashable -any,
        hedgehog -any,
        iohk-monitoring -any,
        plutus-core >= 1.0.0,
        plutus-ledger-api >= 1.0.0,
        memory -any,
        mtl -any,
        newtype-generics -any,
        ouroboros-consensus-shelley -any,
        prettyprinter -any,
        plutus-script-utils -any,
        plutus-tx >= 1.0.0,
        serialise -any,
        scientific -any,
        strict-containers -any,
        tagged -any,
        template-haskell -any,
        text -any,
        time -any,
        time-units -any,
        transformers -any,
        lens -any,
        http-api-data -any,
        servant -any,
        deepseq -any,
        openapi3 -any,
        freer-extras,

    ghc-options: -fprint-potential-instances

    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite plutus-ledger-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    other-modules:
        Ledger.Tx.CardanoAPISpec
    build-depends:
        aeson -any,
        base >=4.9 && <5,
        bytestring -any,
        cardano-api -any,
        cardano-api:gen -any,
        containers -any,
        hedgehog -any,
        plutus-ledger -any,
        plutus-tx >= 1.0.0,
        tasty -any,
        tasty-hedgehog -any,
        tasty-hunit -any,
