cabal-version: 3.0
name:          plutus-pab-executables
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    jann.mueller@iohk.io
author:        Jann Müller
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wunused-packages

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          lang
  exposed-modules: Plutus.PAB.Run.PSGenerator
  hs-source-dirs:  src
  build-depends:
    , freer-extras
    , playground-common
    , plutus-contract
    , plutus-pab

  build-depends:
    , base                >=4.7 && <5
    , lens
    , playground-common
    , purescript-bridge
    , servant-purescript
    , text

executable plutus-pab-setup
  main-is:            Main.hs
  hs-source-dirs:     app
  other-modules:      CommandParser
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  build-depends:
    , aeson
    , base                  >=4.9 && <5
    , iohk-monitoring
    , monad-logger
    , optparse-applicative
    , plutus-contract
    , plutus-pab

-- TODO: This needs to be moved to plutus-use-cases once plutus-pab doesn't
-- depend on plutus-use-cases anymore.
executable plutus-pab-examples
  main-is:            Main.hs
  hs-source-dirs:     examples
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  build-depends:
    , aeson
    , base                       >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , lens
    , openapi3
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-pab-executables
    , plutus-use-cases
    , prettyprinter
    , purescript-bridge
    , row-types
    , text

-- TODO: This needs to be moved to plutus-use-cases once plutus-pab doesn't
-- depend on plutus-use-cases anymore.
executable plutus-uniswap
  main-is:            Main.hs
  hs-source-dirs:     examples/uniswap
  other-modules:
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  build-depends:
    , aeson
    , base               >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , openapi3
    , plutus-contract
    , plutus-ledger-api
    , plutus-pab
    , plutus-use-cases
    , prettyprinter
    , text

-- TODO: This needs to be moved to plutus-use-cases once plutus-pab doesn't
-- depend on plutus-use-cases anymore.
executable plutus-pab-local-cluster
  main-is:            Main.hs
  hs-source-dirs:     local-cluster examples
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  build-depends:
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-pab-executables
    , plutus-use-cases

  build-depends:
    , aeson
    , base               >=4.9 && <5
    , containers
    , data-default
    , freer-simple
    , lens
    , openapi3
    , prettyprinter
    , purescript-bridge
    , row-types
    , text

executable plutus-pab-test-psgenerator
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wunused-packages
  hs-source-dirs:     test-psgenerator test/full examples
  main-is:            TestPSGenerator.hs
  other-modules:
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    Plutus.PAB.Effects.Contract.ContractTest
    Plutus.PAB.Simulator.Test

  -- TODO plutus-use-cases dep needs to be removed
  build-depends:
    , aeson
    , aeson-pretty
    , base                       >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , filepath
    , freer-extras
    , freer-simple
    , lens
    , mtl
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-use-cases
    , prettyprinter
    , purescript-bridge
    , row-types
    , servant-purescript
    , text

test-suite plutus-pab-test-full
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wunused-packages
  hs-source-dirs:     test/full examples
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx
    Plutus.PAB.CliSpec
    Plutus.PAB.CoreSpec
    Plutus.PAB.Effects.Contract.BuiltinSpec
    Plutus.PAB.Effects.Contract.ContractTest
    Plutus.PAB.Simulator.Test

  -- TODO plutus-use-cases dep needs to be removed
  build-depends:
    , aeson
    , async
    , base                       >=4.9 && <5
    , containers
    , data-default
    , freer-extras
    , freer-simple
    , http-client
    , iohk-monitoring
    , lens
    , mtl
    , openapi3
    , playground-common
    , plutus-chain-index-core
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-pab-executables
    , plutus-tx
    , plutus-use-cases
    , prettyprinter
    , purescript-bridge
    , quickcheck-instances
    , row-types
    , servant-client
    , servant-server
    , sqlite-simple
    , stm
    , tasty
    , tasty-hunit
    , text
    , uuid
    , yaml

test-suite plutus-pab-test-full-long-running
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wunused-packages
  hs-source-dirs:     test/full examples
  type:               exitcode-stdio-1.0
  main-is:            SpecLongRunning.hs
  other-modules:
    ContractExample
    ContractExample.AtomicSwap
    ContractExample.IntegrationTest
    ContractExample.PayToWallet
    ContractExample.WaitForTx
    Plutus.PAB.CliSpec
    Plutus.PAB.Effects.Contract.ContractTest
    Plutus.PAB.Simulator.Test

  -- TODO plutus-use-cases dep needs to be removed
  build-depends:
    , aeson
    , async
    , base                       >=4.9 && <5
    , containers
    , data-default
    , freer-extras
    , freer-simple
    , http-client
    , iohk-monitoring
    , lens
    , mtl
    , openapi3
    , playground-common
    , plutus-chain-index-core
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-pab-executables
    , plutus-use-cases
    , prettyprinter
    , purescript-bridge
    , row-types
    , servant-client
    , servant-server
    , sqlite-simple
    , tasty
    , tasty-hunit
    , text
    , yaml

executable tx-inject
  import:           lang
  main-is:          Main.hs
  hs-source-dirs:   tx-inject
  other-modules:    TxInject.RandomTx
  default-language: Haskell2010
  build-depends:
    , base                  >=4.9 && <5
    , clock
    , containers
    , data-default
    , hedgehog
    , lens
    , mwc-random
    , optparse-applicative
    , plutus-contract
    , plutus-ledger
    , plutus-pab
    , pretty-simple
    , primitive
    , rate-limit
    , signal
    , stm
    , text
    , time-units
    , yaml

executable sync-client
  import:           lang
  main-is:          Main.hs
  hs-source-dirs:   sync-client
  default-language: Haskell2010
  build-depends:
    , base                     >=4.9 && <5
    , cardano-api
    , cardano-slotting
    , contra-tracer
    , either
    , optparse-applicative
    , plutus-chain-index-core
    , plutus-ledger
    , text

executable plutus-pab-nami-demo
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: demo/pab-nami/pab/app
  other-modules:  DemoContract
  ghc-options:    -threaded
  build-depends:
    , aeson
    , base                       >=4.9 && <5
    , openapi3
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-pab-executables
    , prettyprinter
    , purescript-bridge

executable plutus-pab-nami-demo-generator
  import:         lang
  main-is:        Generator.hs
  hs-source-dirs: demo/pab-nami/pab/app
  other-modules:  DemoContract
  ghc-options:    -threaded
  build-depends:
    , aeson
    , base                       >=4.9 && <5
    , openapi3
    , optparse-applicative
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-pab-executables
    , prettyprinter
    , purescript-bridge

executable pab-cli
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: pab-cli
  other-modules:
    App
    CommandParser
    Types

  ghc-options:    -threaded -Wmissing-import-lists -Wunused-packages
  build-depends:
    , plutus-chain-index-core
    , plutus-ledger
    , plutus-pab

  build-depends:
    , cardano-api
    , cardano-ledger-shelley
    , ouroboros-consensus-shelley

  build-depends:
    , aeson
    , async
    , base            >=4.9 && <5
    , bytestring
    , cardano-api
    , data-default
    , directory
    , docopt
    , exceptions
    , filepath
    , freer-simple
    , MissingH
    , process
    , req
    , servant-client
    , text
    , time
    , yaml
